# Ping

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt  workflow_graph
Docker/: dockerfile.rag
db_connectors/: chunk_and_create_documents.py  connection_qdrant.py  create_qdrant_collection.py
pingis_venv/: pyvenv.cfg
src/app/: main.py  memory_store.py
src/app/static/: index.html  query_form.html  scripts.js  styles.css
trash_for_now/: backend.py
